max-width to avoid vertical scrolling on small browsers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -188,7 +188,7 @@ div#wrapper {
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 1em;
-	width: 1100px;
+	max-width: 1100px;
 }
 div#inside {
 	margin-left: 0.25em;
